
 * this script adds a new column SCHED_TIME to table QRTZ_FIRED_TRIGGERS
 * file contains the alter command for SQL Server and other database samples in comments

BREAKING CHANGES

 * database schema needs upgrade
 * add SchedulerStarting() method to ISchedulerListener interface
 * make the scheduler's TypeLoadHelper available to plugins when they are initialized 

NEW FEATURES

 * ability to override worker thread names (when using SimpleThreadPool)
 * add new IScheduler method: ScheduleJob(IJobDetail job, ISet trigger) to schedule multiple triggers for a job all at once
 * allow 'triggerless' initial storing of non-durable jobs.
 * improvements for job recovery information
 * package job_scheduling_data_2_0.xsd to nuget package's content folder
 * allow scheduler exported with remoting to be used from local machine only
 * support for Oracle managed ODP driver
 
FIXES

 * job ending with exception and trigger not going to fire again, trigger is incorrectly not removed from job store
 * XML schema supports multiple schedule elements but processor does not
 * DailyTimeIntervalTriggerPersistenceDelegate does not handle empty time interval properly
 * DailyTimeIntervalScheduleBuilder.EndingDailyAfterCount(...) doesn't pass validation
 * trace throwing exception
 * bug in QuartzSchedulerThread.GetRandomizedIdleWaitTime()
 
MISC

* Performance improvements, including improvements to some select statements in AdoJobStore


Thanks to our vibrant community actively helping on mailing list and reportings issues and creating pull requests.


Release 2.1.2, Jan 13, 2013
--------------------------------

This is a maintenance release that fixes .NET 4.5 requirement for 4.0 DLLs caused by ilmerge process

Release 2.1.1, Jan 5, 2013
--------------------------------

This is a maintenance release that adds strong naming back to Quartz.NET assemblies.


Release 2.1, Dec 31, 2012
--------------------------------
